[gd_scene load_steps=5 format=1]

[ext_resource path="res://scenes/jogo_goleiro/nivel03.gd" type="Script" id=1]
[ext_resource path="res://scenes/jogo_goleiro/imagens/nivel_03.png" type="Texture" id=2]
[ext_resource path="res://fonts/GFSNeohellenic.fnt" type="BitmapFont" id=3]

[sub_resource type="StyleBoxFlat" id=1]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.6, 0.6, 0.6, 1 )
light_color = Color( 0.8, 0.8, 0.8, 1 )
dark_color = Color( 0.8, 0.8, 0.8, 1 )
border_size = 0
border_blend = true
draw_bg = true

[node name="raiz_jogoGoleiro_nl1" type="Node2D"]

script/script = ExtResource( 1 )

[node name="imagem" type="Sprite" parent="."]

transform/pos = Vector2( 0, -2.0506 )
transform/scale = Vector2( 0.42, 0.42 )
texture = ExtResource( 2 )
centered = false

[node name="Label" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 260.0
margin/top = 72.0
margin/right = 421.0
margin/bottom = 121.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.800781, 0.118866, 0.118866, 1 )
custom_colors/font_color_shadow = Color( 0.261719, 0.115524, 0.115524, 1 )
text = "Nivel 03"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="b_endGame" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 272.0
margin/top = 396.0
margin/right = 522.0
margin/bottom = 446.0
custom_fonts/font = ExtResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Encerrar jogo"
flat = false

[node name="janelaFim" type="Panel" parent="."]

visibility/opacity = 0.7
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 160.0
margin/top = 68.0
margin/right = 661.0
margin/bottom = 288.0

[node name="b_voltaMenu" type="Button" parent="janelaFim"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 140.0
margin/top = 156.0
margin/right = 385.0
margin/bottom = 206.0
custom_styles/hover = SubResource( 1 )
custom_fonts/font = ExtResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Voltar menu"
flat = false

[node name="b_sairGame" type="Button" parent="janelaFim"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 75.0
margin/top = 93.0
margin/right = 423.0
margin/bottom = 143.0
custom_styles/hover = SubResource( 1 )
custom_fonts/font = ExtResource( 3 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Sair do Jogo (ESC)"
flat = false

[node name="texto" type="Label" parent="janelaFim"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 65.0
margin/top = 17.0
margin/right = 535.0
margin/bottom = 61.0
custom_fonts/font = ExtResource( 3 )
text = "Fim do jogo... bla bla"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1


